src/parser/snapshots/enderpy__parser__parser__tests__attribute_ref-3.snap
---
source: src/parser/parser.rs
description: a.b_c
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            Attribute(
                Attribute {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    attr: "b_c",
                },
            ),
        ),
    ],
}
