src/parser/snapshots/enderpy__parser__parser__tests__attribute_ref-4.snap
---
source: src/parser/parser.rs
description: a.b.c.d
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        ExpressionStatement(
            Attribute(
                Attribute {
                    node: Node {
                        start: 0,
                        end: 6,
                    },
                    value: Attribute(
                        Attribute {
                            node: Node {
                                start: 0,
                                end: 4,
                            },
                            value: Attribute(
                                Attribute {
                                    node: Node {
                                        start: 0,
                                        end: 2,
                                    },
                                    value: Name(
                                        Name {
                                            node: Node {
                                                start: 0,
                                                end: 1,
                                            },
                                            id: "a",
                                        },
                                    ),
                                    attr: "b",
                                },
                            ),
                            attr: "c",
                        },
                    ),
                    attr: "d",
                },
            ),
        ),
    ],
}
