src/parser/snapshots/enderpy__parser__parser__tests__attribute_ref.snap
---
source: src/parser/parser.rs
description: a.b
---
Module {
    node: Node {
        start: 0,
        end: 3,
    },
    body: [
        ExpressionStatement(
            Attribute(
                Attribute {
                    node: Node {
                        start: 0,
                        end: 2,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    attr: "b",
                },
            ),
        ),
    ],
}
