src/parser/snapshots/enderpy__parser__parser__tests__binary_op-11.snap
---
source: src/parser/parser.rs
description: a ^ b
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            BinOp(
                BinOp {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    op: BitXor,
                    left: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    right: Name(
                        Name {
                            node: Node {
                                start: 4,
                                end: 5,
                            },
                            id: "b",
                        },
                    ),
                },
            ),
        ),
    ],
}
